--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hound_and_rabbit</title>
+
+    <!-- <script type="module" src="js/field.js"></script>
+    <script nomodule src="js/field.js"></script> -->
 </head>
 <body>
     
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
