--- a/index.html
+++ b/index.html
@@ -111,6 +111,6 @@
             </div>
         </div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
