class更名 Field -> Grid Pawn -> Piece

--- a/index.html
+++ b/index.html
@@ -17,9 +17,16 @@
         body{
             height: inherit;
         }
+
+        h1{
+            position:absolute;
+            top: 0px;
+            left: 10px;
+        }
     </style>
 </head>
 <body>
+    <h1>現在回合 : </h1>
     <canvas></canvas>
     <script src="main.js"></script>
 </body>
