--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <h1>現在回合 : </h1>
+    <h1>現在回合 : 1</h1>
     <canvas></canvas>
     <script src="main.js"></script>
 </body>
